# projetCuda3

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
data/lego_front/: frameinfo.json
include/: dataset.h  render.h
include/helper/: Utility.cuh
src/: dataset.cpp  main.cpp  render.cpp  render.cu
